[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "pyotheus"
version = "0.1.0.dev0"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Doug Davis", email = "ddavis@ddavis.io" }]
maintainers = [{ name = "Doug Davis", email = "ddavis@ddavis.io" }]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
]


[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.9.6",
    "pytest>=8.4.2",
]
